src/test/deca/syntax/invalid/lexer/WS_lex.deca
// Description:
//    commentaires
//    lexicalement correct
//
// Resultats:
//    ok
//
// Historique:
//    cree le 09/01/2023
//
/* abcd */
/* /* */
/***/

//abc
    //abcd
//
// +-|%
// \n \t \r